--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Home Page</h1>
         <p>Hello everyone</p>
         <div class="gallery">
-            <a href="watch.html"><img src="images/watch 1.jpg" height="150"></a>
+            <a href="watch.html"><img src="images/Watch.jpg" height="150"></a>
             <a href="bracelet.html"><img src="images/Bracelet%201.jpg" height="150"></a>
             <a href="ring.html"><img src="images/Ring%201.jpg" height="150"></a>
             <a href="rose-dome-light.html"><img src="images/Rose%20dome%20light%201.jpg" height="150"></a>
