--- a/watch.html
+++ b/watch.html
@@ -12,7 +12,7 @@
         <h1>Watches</h1>
         <h2>Women's Elegantly Designed Cuff Bangle Watch</h2>
         <div class="gallery">
-            <img src="images/Watch%201.jpg" height="150"/>
+            <img src="images/Watch.jpg" height="150"/>
             <img src="images/Watch%202.jpg" height="150"/>
             <img src="images/Watch%205.jpg" height="150"/>
         </div>    
